Fix chart values

--- a/packages/opni/opni/charts/templates/ai/opnicluster.yaml
+++ b/packages/opni/opni/charts/templates/ai/opnicluster.yaml
@@ -19,29 +19,7 @@ spec:
       - name: rancher
       - name: longhorn
     metrics:
-      enabled: {{ .Values.monitoring.enabled }}
-      prometheusEndpoint: https://cortex-query-frontend:8080
-      extraVolumeMounts:
-      - name: cortex-client-certs
-        mountPath: /run/cortex/certs/client
-        secret:
-          secretName: cortex-client-cert-keys
-          defaultMode: 256
-          items:
-            - key: tls.crt
-              path: tls.crt
-            - key: tls.key
-              path: tls.key
-            - key: ca.crt
-              path: ca.crt
-      - name: cortex-server-cacert
-        mountPath: /run/cortex/certs/server
-        secret:
-          secretName: cortex-serving-cert-keys
-          defaultMode: 256
-          items:
-            - key: ca.crt
-              path: ca.crt
+      enabled: false
   opensearch:
     name: opni
     namespace: {{ include "opni.namespace" . }}
