Update monitoring chart settings

--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -98,7 +98,7 @@ bootstrapInCluster:
   managementAddress: ""
 
 kube-prometheus-stack:
-  enabled: false
+  enabled: true
   grafana:
     enabled: false # disable the default Grafana deployment
   prometheus:
