--- a/packages/opni/opni/charts/values.yaml
+++ b/packages/opni/opni/charts/values.yaml
@@ -51,7 +51,7 @@ ai:
     internal: {}
 
 opni-prometheus-crd:
-  enabled: true # set to false if `opni-agent.kube-prometheus-stack.enabled` is true
+  enabled: false # set to false if `opni-agent.kube-prometheus-stack.enabled` is true
 
 opni-agent:
   enabled: true
@@ -63,14 +63,13 @@ opni-agent:
   agent:
     version: v2
   kube-prometheus-stack:
-    enabled: false
+    enabled: true
 
 global:
   cattle:
     systemDefaultRegistry: ""
 
 kube-prometheus-stack:
-  enabled: true
   grafana:
     enabled: false # disable the default Grafana deployment
   prometheus:
