--- a/config/crd/grafana/grafana.opni.io_grafanadashboards.yaml
+++ b/config/crd/grafana/grafana.opni.io_grafanadashboards.yaml
@@ -79,6 +79,8 @@ spec:
                 type: array
               url:
                 type: string
+              useAsHomeDashboard:
+                type: boolean
             type: object
           status:
             type: object
