Add do not track hooks to charts

--- a/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
@@ -50,6 +50,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          {{- if .Values.disableUsage }}
+            - name: DO_NOT_TRACK
+              value: "1"
+          {{- end }}
           volumeMounts:
             - name: config
               mountPath: /etc/opni
