--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -70,6 +70,8 @@ tolerations: []
 
 affinity: {}
 
+disableUsage: false
+
 # If the following values are set, the agent-config secret will be created.
 # Otherwise, it can be manually created using `opni bootstrap`
 
