--- a/packages/opni/opni/charts/templates/deployment.yaml
+++ b/packages/opni/opni/charts/templates/deployment.yaml
@@ -49,6 +49,10 @@ spec:
                 fieldPath: metadata.namespace
           - name: NODE_FEATURE_DISCOVERY_IMAGE
             value: k8s.gcr.io/nfd/node-feature-discovery:v0.7.0
+        {{- if .Values.disableUsage }}
+          - name: DO_NOT_TRACK
+            value: "1"
+        {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default $versionTag }}"
