--- a/config/crd/grafana/grafana.opni.io_grafanadashboards.yaml
+++ b/config/crd/grafana/grafana.opni.io_grafanadashboards.yaml
@@ -38,6 +38,8 @@ spec:
                 required:
                 - key
                 type: object
+              contentCacheDuration:
+                type: string
               customFolderName:
                 type: string
               datasources:
@@ -61,6 +63,20 @@ spec:
                 required:
                 - id
                 type: object
+              gzipConfigMapRef:
+                properties:
+                  key:
+                    type: string
+                  name:
+                    type: string
+                  optional:
+                    type: boolean
+                required:
+                - key
+                type: object
+              gzipJson:
+                format: byte
+                type: string
               json:
                 type: string
               jsonnet:
@@ -83,6 +99,27 @@ spec:
                 type: boolean
             type: object
           status:
+            properties:
+              contentCache:
+                format: byte
+                type: string
+              contentTimestamp:
+                format: date-time
+                type: string
+              contentUrl:
+                type: string
+              error:
+                properties:
+                  code:
+                    type: integer
+                  error:
+                    type: string
+                  retries:
+                    type: integer
+                required:
+                - code
+                - error
+                type: object
             type: object
         type: object
     served: true
