Remove old feature toggles

--- a/packages/opni/opni/charts/templates/features.yaml
+++ b/packages/opni/opni/charts/templates/features.yaml
@@ -4,10 +4,4 @@ metadata:
   name: feature-flags
   namespace: {{ include "opni.namespace" . }}
 data:
-  features: |
-    manage-opensearch:
-      description: Management API for Opensearch Clusters
-      enabled: true
-    tracing:
-      description: Trace collection feature
-      enabled: true
+  features: ""
