Add rancher bot git creds to drone env vars

--- a/.drone.yml
+++ b/.drone.yml
@@ -56,6 +56,10 @@ steps:
       HELM_OCI_USERNAME: rancher
       HELM_OCI_PASSWORD:
         from_secret: github_token
+      GITHUB_TOKEN:
+        from_secret: github_token
+      GIT_USER: Rancher Bot
+      GIT_EMAIL: rancherbot@rancher.com
       TAG: ${DRONE_TAG}
     commands:
       - bin/dagger do push
@@ -80,6 +84,10 @@ steps:
       HELM_OCI_USERNAME: rancher
       HELM_OCI_PASSWORD:
         from_secret: github_token
+      GITHUB_TOKEN:
+        from_secret: github_token
+      GIT_USER: Rancher Bot
+      GIT_EMAIL: rancherbot@rancher.com
       TAG: latest
     commands:
       - bin/dagger do push
@@ -104,6 +112,10 @@ steps:
       HELM_OCI_USERNAME: rancher
       HELM_OCI_PASSWORD:
         from_secret: github_token
+      GITHUB_TOKEN:
+        from_secret: github_token
+      GIT_USER: Rancher Bot
+      GIT_EMAIL: rancherbot@rancher.com
       TAG: main
     commands:
       - bin/dagger do push
