Add gateway pvc; bugfixes

--- a/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
@@ -18,8 +18,7 @@ stringData:
       storage:
         type: customResources
       plugins:
-        dirs:
-          - /var/lib/opni-agent/plugins
+        dir: /var/lib/opni-agent/plugins
       bootstrap:
         {{- if .Values.bootstrapInCluster.enabled }}
         inClusterManagementAddress: {{ .Values.bootstrapInCluster.managementAddress }}
