--- a/config/agent-crd/kustomization.yaml
+++ b/config/agent-crd/kustomization.yaml
@@ -9,8 +9,8 @@ resources:
 - logging/logging.opni.io_outputs.yaml
 - bases/logging.opni.io_logadapters.yaml
 - bases/logging.opni.io_datapreppers.yaml
-- bases/monitoring.opni.io_bootstraptokens.yaml
-- bases/monitoring.opni.io_keyrings.yaml
+- bases/core.opni.io_bootstraptokens.yaml
+- bases/core.opni.io_keyrings.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
