--- a/config/crd/bases/core.opni.io_keyrings.yaml
+++ b/config/crd/bases/core.opni.io_keyrings.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.1-0.20220428122951-32ad71090a62
   creationTimestamp: null
-  name: keyrings.monitoring.opni.io
+  name: keyrings.core.opni.io
 spec:
-  group: monitoring.opni.io
+  group: core.opni.io
   names:
     kind: Keyring
     listKind: KeyringList
