--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,6 +17,8 @@ resources:
 - bases/opni.io_gpupolicyadapters.yaml
 - bases/ai.opni.io_opniclusters.yaml
 - bases/ai.opni.io_pretrainedmodels.yaml
+- bases/core.opni.io_bootstraptokens.yaml
+- bases/core.opni.io_keyrings.yaml
 - bases/core.opni.io_gateways.yaml
 - bases/core.opni.io_loggingclusters.yaml
 - bases/core.opni.io_monitoringclusters.yaml
@@ -27,8 +29,6 @@ resources:
 - bases/logging.opni.io_multiclusterrolebindings.yaml
 - bases/logging.opni.io_multiclusterusers.yaml
 - bases/logging.opni.io_opniopensearches.yaml
-- bases/monitoring.opni.io_bootstraptokens.yaml
-- bases/monitoring.opni.io_keyrings.yaml
 - bases/monitoring.opni.io_rolebindings.yaml
 - bases/monitoring.opni.io_roles.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
