Allow agents to provide an optional initial value for the name label during bootstrap

--- a/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
@@ -25,6 +25,9 @@ stringData:
         {{- else }}
         token: {{ .Values.token }}
         pins: [{{ .Values.pin }}]
+        {{- if .Values.friendlyName }}
+        friendlyName: {{ .Values.friendlyName }}
+        {{- end }}
         {{- end }}
       {{- if .Values.logLevel }}
       logLevel: {{ .Values.logLevel }}
